deployment/apps/postgres/base/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-system-tcp
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-tcp
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: cluster-example-initdb-rw
        port: 5432
        weight: 1
